@@ -42,6 +42,15 @@
 
 -->
     <listitem>
+      <para>July 2nd, 2012</para>
+      <itemizedlist>
+        <listitem>
+          <para>[krejzi] - Bump bootscripts to 20120702 for BlueZ addition.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>July 1st, 2012</para>
       <itemizedlist>
 	<listitem>
