@@ -1,0 +1,30 @@
+# Begin /etc/sysconfig/bluetooth
+
+# Run the bluetooth HID daemon (default: false)
+#HIDD_ENABLE="true"
+
+# Activate rfcomm ports (default: false)
+#RFCOMM_ENABLE="true"
+
+# Run bluetooth dial-up networking daemon (default: false)
+# Note: You need to pass coressponding options to the daemon
+# since it does not run without any options.
+#DUND_ENABLE="true"
+
+# Run bluetooth PAN daemon (default: false)
+# Note: You need to pass coressponding options to the daemon
+# since it does not run without any options.
+#PAND_ENABLE="true"
+
+# Options for hidd, dund and pand (default: none)
+
+# See man 1 hidd for available options.
+#HIDD_OPTIONS=""
+
+# See man 1 dund for available options.
+#DUND_OPTIONS=""
+
+# See man 1 pand for available options.
+#PAND_OPTIONS=""
+
+# End /etc/sysconfig/bluetooth
